# SXLivePlayer

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xingfeng/sxliveplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/libcommon/: CommonTools.h
app/src/main/cpp/libcommon/message_queue/: message_queue.cpp
app/src/main/cpp/libcommon/opengl_media/render/: video_gl_surface_render.cpp
app/src/main/cpp/live_show_video_player/jni/: ELPlayerController.cpp  com_xingfeng_sxliveplayer_ELPlayerController.h
app/src/main/cpp/video_player/libvideoplayer/: audio_output.cpp
app/src/main/cpp/video_player/libvideoplayer/decoder/: video_decoder.cpp
app/src/main/cpp/video_player/libvideoplayer/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/java/com/changba/songstudio/video/: ChangbaPlayerActivity.java
app/src/main/java/com/xingfeng/sxliveplayer/: ELLivePlayerController.java  ELPlayerController.java  MainActivity.java  SpeedUpFirstScreenPlayerActivity.java  TestActivity.java
app/src/main/java/com/xingfeng/sxliveplayer/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/xingfeng/sxliveplayer/player/: OnInitializedCallback.java  OnStoppedCallback.java
app/src/main/jni/: com_changba_songstudio_video_player_ChangbaPlayer.h  com_xingfeng_sxliveplayer_ELPlayerController.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/xingfeng/sxliveplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
